--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>shlo
 
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non quae, enim, accusamus hic harum optio deserunt sed earum eum, molestias ut rem quasi ducimus tempore natus ullam molestiae repellendus dolore.
+        Lorem ipsum d  this is really amazing thing to add I am doing it from phone and I qk really excitedolor sit amet consectetur adipisicing elit. Repellendus alias perferendis voluptates ea magnam maxime suscipit repudiandae similique nostrum, pariatur minima beatae atque unde veritatis odio delectus. Culpa, rem similique.
 
     </p>
     <del>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid itaque, harum expedita saepe quam iusto! Aliquam accusamus illum, mollitia, velit sint non quia vel minima unde facere nam nisi nulla?
