--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus at tempora officia veniam quod est aliquam totam consequuntur. A laboriosam dolorum architecto nisi, accusamus sunt voluptate animi! Optio, iusto ipsam?
         <p>shlo
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non quae, enim, accusamus hic harum optio deserunt sed earum eum, molestias ut rem quasi ducimus tempore natus ullam molestiae repellendus dolore.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non quae, enim, accusamus hic harum optio deserunt sed earum eum, molestias ut rem quasi ducimus tempore natus ullam molestiae repellendus dolore.
 
 
     </p>
