--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Hi<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
     <p>shlo
         Lorem ipsum d  this is really amazing thing to add I am doing it from phone and I qk really excitedolor sit amet consectetur adipisicing elit. Repellendus alias perferendis voluptates ea magnam maxime suscipit repudiandae similique nostrum, pariatur minima beatae atque unde veritatis odio delectus. Culpa, rem similique.
     </p>
-    <del>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid itaque, harum expedita saepe quam iusto! Aliquam accusamus illum, mollitia, velit sint non quia vel minima unde facere nam nisi nulla?
+    <del>Lorem ipsum this is a deleted filedolor sit amet consectetur adipisicing elit. Aliquid itaque, harum expedita saepe quam iusto! Aliquam accusamus illum, mollitia, velit sint non quia vel minima unde facere nam nisi nulla?
 
     </del>
     <em>
